[project]
name = "rendertest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
